...
    <string name="finished">finished</string>
    <string name="image">image</string>
    <string name="please_enter_the_password">Please enter the password</string>
    <string name="please_enter_the_password_again">Please enter the password again</string>
    <string name="two_password_are_not_same">Two passwords are not same</string>
    <string name="family_created_successfully">Family Created Successfully</string>
    <string name="family_id_not_exist">Family Id is not correct!</string>
    <string name="password_is_incorrect">Password is not correct!</string>
    <string name="join_family_successfully">Join family successful!</string>
    <string name="delete_from_this_category">Delete From This Category</string>
    <string name="get_read_permission">Already get the permission to access photos</string>
    <string name="please_pick_date_for_item">Double click to pick a date for
        item</string>
    <string name="no_items_for_the_show_page">No Items For The Show Page</string>
    <string name="reset_email_message">The reset password email has been sent, please click the link in the email to reset your email.</string>
...
